add <packaging> and <dependancies> tags to pom.xml file in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Back_End/pom.xml
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Back_End/pom.xml
@@ -7,10 +7,15 @@
     <groupId>lk.easycarrental.spring</groupId>
     <artifactId>Spring_Back_End</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        
+    </dependencies>
 
 </project>
